--- a/css/swannanoa-flooding.css
+++ b/css/swannanoa-flooding.css
@@ -20,6 +20,9 @@
     font-size: 2vh;
     box-shadow: 0 0 1vh black;
     text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .slider-container {
