--- a/css/swannanoa-flooding.css
+++ b/css/swannanoa-flooding.css
@@ -1,12 +1,20 @@
 #map {
   width: 100%;
   height: 90vh;
+  margin: 0;
 }
 
 .opacity-control {
     position: absolute;
     top: 11vh;
     left: 2.5vh;
+    z-index: 1;
+}
+
+.info-control {
+    position: absolute;
+    top: 11vh;
+    right: 9.5vh;
     z-index: 1;
 }
 
@@ -24,6 +32,11 @@
     justify-content: space-around;
     align-items: center;
     padding: 0;
+}
+
+.control-button img {
+  width: 80%;
+  height: auto;
 }
 
 .slider-container {
@@ -68,7 +81,7 @@
   right: 0;
 }
 
-#legend-toggle {
+#info-toggle {
   font-weight: bold;
 }
 
@@ -87,28 +100,51 @@
   font-size: 2vh;
 }
 
+#map-info-container {
+  /* margin: 0; */
+  /* padding: 0; */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #32537E;
+  max-width: 100vw;
+}
+
 #map-info {
+  /* margin: 0; */
   width: 80%;
-  margin-left: auto;
-  margin-right: auto;
+  background-color: white;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+}
+
+#map-info p {
+  padding: 1vh 4vh;
+}
+
+.section-link {
+  text-decoration: none;
 }
 
 @media screen and (max-width: 1024px) {
   .opacity-control {
-      position: absolute;
       top: 16vh;
-      left: 2.5vh;
-      z-index: 1;
   }
 
   .legend-control {
-      position: absolute;
       top: 16vh;
-      right: 2.5vh;
-      z-index: 1;
+  }
+
+  .info-control {
+      top: 16vh;
   }
 
   #map {
     height: 75vh;
+  }
+
+  #map-info {
+    padding-top: 1vh;
+    padding-bottom: 1vh;
   }
 }
