--- a/css/tree-damage.css
+++ b/css/tree-damage.css
@@ -18,7 +18,7 @@
     position: absolute;
     top: 11vh;
     left: 2.5vh;
-    z-index: 1;
+    z-index: 10000;
 }
 
 .info-control {
@@ -32,7 +32,7 @@
 .resolution-control {
     position: absolute;
     top: 11vh;
-    left: 9.5vh;
+    left: 2.5vh;
     z-index: 1;
 }
 
@@ -168,6 +168,7 @@
   justify-content: space-around;
   background-color: #32537E;
   max-width: 100vw;
+  font-size: 2.5vh;
 }
 
 #map-info {
